// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`H1 should allow weight to be overridden 1`] = `
.glamor-0 {
  display: block;
}

<h1
  className="glamor-0 root weight-medium size-extra-large color-charcoal hover-color-none root"
  href={undefined}
  name={undefined}
  onClick={undefined}
  style={Object {}}
  target={undefined}
>
  An H1 Tag
</h1>
`;

exports[`H1 should render shallow component ok 1`] = `
.glamor-0 {
  display: block;
}

<h1
  className="glamor-0 root weight-normal size-extra-large color-charcoal hover-color-none root"
  href={undefined}
  name={undefined}
  onClick={undefined}
  style={Object {}}
  target={undefined}
>
  An H1 Tag
</h1>
`;
